--- a/app/views/users/thanks.html.erb
+++ b/app/views/users/thanks.html.erb
@@ -1,5 +1,4 @@
-<div class=" mx-auto col-10 my-5" style="width: 50%; ">
-  <h2 style="height: 300px;">ご購入ありがとうございました。</h2>
+  <h2 class="text-center my-5" style="height: 300px;">ご購入ありがとうございました!</h2>
 
   <%= link_to user_path(current_user) do %>
   <button type="button" class="btn btn-warning">マイページに戻る</button>
@@ -7,4 +6,4 @@
   <%= link_to top_path do %>
   <button type="button" class="btn btn-warning">TOPページに戻る</button>
   <% end %>
-</div>
+
