--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -59,7 +59,7 @@
 	</tr>
 
 	<tr>
-		<td><%= link_to "マイページに戻る", user_path(current_user.id), class: "btn btn-lg btn-success btn-base-1 mt-20" %></td>
+		<td><%= link_to "マイページに戻る", user_path(current_user), class: "btn btn-lg btn-success btn-base-1 mt-20" %></td>
 		<td></td>
 		<td></td>
 	</tr>
