--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,36 +11,68 @@
 				<div class="col-lg-6 mb-5">
 					<%= attachment_image_tag @item, :item_img, class:"", style: "width: 100%; height: 100%;" %>
 				</div>
-				
 				<!-- 右 -->
 				<div class="col-lg-6 bg-white px-3 mb-5">
 
 					<h2 class="my-3"><%= @item.album_name %></h2>
-					<p class="mb-5">アーティスト名: <%= @item.artist.artist_name %></p>
-
-					<p class="mb-0">価格</p>
+					<p class="mb-2">アーティスト: <%= @item.artist.artist_name %></p>
+					<p class="mb-1">レーベル: <%= @item.label %></p>
+					<p class="mb-2">ジャンル: <%= @item.genre.genre_name %></p>
+					<p class="d-inline">価格</p>
 					<h3  class="mb-3">¥ <%= @item.item_price_tax_free %></h3>
 
 					<p class="mb-3">在庫: <%= @item.stock %>点</p>
-
+					<% if @item.stock == 0 %>
+					<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>在庫が切れています。</strong></br>申し訳ございませんが、入荷までお待ちください。
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+					<% end %>
 					<%= form_for(@cart_item , url:item_cart_items_path(@item), html:  {class: "float-right"}) do |f|  %>
 					<%= f.number_field :item_cart_counted ,value:"1", in: 1...21, size: 20 %>点
-					
+					<% if user_signed_in? %>
 						<%= button_tag :type => "submit", :class =>"btn btn-danger my-5" do %>
 	  					<i class="fas fa-cart-arrow-down"></i> カートにいれる
 						<% end %>
 					<% end %>
-					
+
+					<% end %>
+
 				</div>
 
 			</div>
 			</div>
 		</div>
 
-		<%= link_to :back, class: "btn btn-success white-text col-lg-6 mx-auto mb-5" do %>
-					<i class="fas fa-chevron-left"></i> 前のページに戻る
-					<% end %>
 
+		<div class="w-100 bg-white py-3 px-5 mb-5">
+<h4 class="text-center">商品内容</h4>
+<ul class="nav nav-tabs" id="myTab" role="tablist"><% @n = 1%>
+	<% @item.discs.each do |id| %>
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home<%= @n %>" role="tab" aria-controls="home" aria-selected="true">No.<%= @n %></a>
+  </li><% @n += 1 %><% end %>
+</ul>
+
+<div class="tab-content" id="myTabContent"><% @n2 = 1%>
+	<% @item.discs.each do |ud| %>
+  			<div class="tab-pane fade show active" id="home<%= @n2 %>" role="tabpanel" aria-labelledby="home-tab">商品型：<%= ud.disc_type %></br>
+				<% @no = 1 %>
+				<% ud.songs.each do |is| %>
+				No.<%= @no %>：<%= is.song_name%><br><% @no += 1 %>
+				<% end %><% @n2 += 1 %>
+			</div>
+
+<% end %>
+</div>
+</div>
+
+
+<%= link_to :back, class: "btn btn-success white-text col-lg-6 mx-auto mb-5" do %>
+                    <i class="fas fa-chevron-left"></i> 前のページに戻る
+                    <% end %>
 
 	</div>
 </div>
