--- a/app/views/users/thanks.html.erb
+++ b/app/views/users/thanks.html.erb
@@ -1,9 +1,16 @@
-  <h2 class="text-center my-5" style="height: 300px;">ご購入ありがとうございました!</h2>
+  <h2 class="text-center" style="margin: 150px;">ご購入ありがとうございました!</h2>
+<div class="container">
+<div class="row">
 
+<div class="col-4 mx-auto">
   <%= link_to user_path(current_user) do %>
-  <button type="button" class="btn btn-warning">マイページに戻る</button>
+  <button type="button" class="btn btn-warning float-left">マイページに戻る</button>
   <% end %>
   <%= link_to top_path do %>
-  <button type="button" class="btn btn-warning">TOPページに戻る</button>
+  <button type="button" class="btn btn-warning float-right">TOPページに戻る</button>
   <% end %>
+</div>
+
+</div>
+</div>
 
