--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -10,14 +10,11 @@
 
 
   <%= link_to admins_users_path do %>
-  <button type="button" class="btn btn-primary btn-block mar"><div class="pad">ユーザー</div></button>
+  <button type="button" class="btn btn-success btn-block mar"><div class="pad">ユーザー</div></button>
   <% end %>
 
-  <%= link_to admins_stock_path do %>
-  <button type="button" class="btn btn-success btn-block mar"><div class="pad">在庫</div></button>
-  <% end %>
   <%= link_to admins_status_path do %>
-  <button type="button" class="btn btn-info btn-block mar"><div class="pad">配送状況</div></button>
+  <button type="button" class="btn btn-info btn-block mar"><div class="pad">配送状況・在庫切れ管理</div></button>
   <% end %>
 </div>
 
