--- a/app/views/admins/users/edit.html.erb
+++ b/app/views/admins/users/edit.html.erb
@@ -48,7 +48,9 @@
    </tr>
  </table>
  <% end %>
+ <%= link_to admins_destroy_user_path(@user), method: :patch , deta: {confirm: "本当にこのユーザーを削除しますか？\n一度削除したユーザーは元に戻せません。"} , class: "btn btn-danger white-text mt-3" do %>
+  このユーザーを削除する<i class="far fa-trash-alt"></i>
+ <% end %>
 </div>
-
 
 
