--- a/app/views/admins/users/index.html.erb
+++ b/app/views/admins/users/index.html.erb
@@ -1,15 +1,16 @@
 <h1>Admins::Users#index</h1>
 <p>Find me in app/views/admins/users/index.html.erb</p>
-
+<%= h(flash[:notice]) %>
 <div class="container">
 <div class="row">
-
+<h3>ユーザー一覧</h3>
 <table class="col-lg-12 table table-striped">
   <thead>
     <tr>
       <th scope="col">ユーザー名（漢字）</th>
       <th scope="col">住所</th>
       <th scope="col">編集</th>
+      <th scope="col"></th>
       <th scope="col">購入履歴</th>
     </tr>
   </thead>
@@ -23,12 +24,33 @@
         <i class="fas fa-wrench"></i>
         <% end %>
       </td>
+      <td><%= link_to admins_destroy_user_path(user), method: :patch , data: {confirm: "本当にこのユーザーを削除しますか？\n一度削除したユーザーは元に戻せません。"} , class: "btn btn-danger" do %><i class="far fa-trash-alt"></i>
+ <% end %></td>
       <td><%= link_to "購入履歴一覧へ",admins_user_path(user), class:"btn btn-info" %></td>
     </tr>
   </tbody>
   <% end %>
 </table>
 
+<h3>削除済みユーザー一覧</h3>
+<table class="col-lg-12 table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">ユーザー名（漢字）</th>
+      <th scope="col">住所</th>
+      <th scope="col">購入履歴</th>
+    </tr>
+  </thead>
+  <% @quit_user.each do |user| %>
+  <tbody>
+    <tr>
+      <th scope="row"><%= user.name_kanji %></th>
+      <td><%= user.address %></td>
+      <td><%= link_to "購入履歴一覧へ",admins_user_path(user), class:"btn btn-info" %></td>
+    </tr>
+  </tbody>
+  <% end %>
+</table>
 </div>
 </div>
 
