--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -73,7 +73,7 @@
 		<div class="card">
 		  <div class="card-body text-center">
 		  	<a data-toggle="collapse" data-parent="#accordion" href="#collapse<%= order.id %>">
-				      <P class="w-25 float-left">注文番号：<%= @sum %></P><p class="w-75 float-right">　配送状況：<%= order.status %></p></a>
+				      <p class="w-25 float-left">注文番号：<%= @sum %></p><p class="w-75 float-right">　配送状況：<%= order.status %></p></a>
 		  </div>
 		 	<div id="collapse<%= order.id %>" class="card-collapse collapse in">
 				<div class="card-body"><% order.order_items.each do |oi| %>
