--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -49,8 +49,6 @@
 
 		<div class="w-100 bg-white py-3 px-5 mb-5">
 <h4 class="text-center">商品内容</h4>
-
-
 <ul class="nav nav-tabs" id="myTab" role="tablist"><% @n = 1%>
 	<% @item.discs.each do |id| %>
   <li class="nav-item">
@@ -64,15 +62,13 @@
 				<% @no = 1 %>
 				<% ud.songs.each do |is| %>
 				No.<%= @no %>：<%= is.song_name%><br><% @no += 1 %>
-				<% end %><% @n2 += 1 %>
+				<% end %>
+				<% @n2 += 1 %>
 			</div>
-
 <% end %>
 </div>
-
-
-
 </div>
+
 
 
 <%= link_to :back, class: "btn btn-success white-text col-lg-6 mx-auto mb-5" do %>
@@ -81,3 +77,6 @@
 
 	</div>
 </div>
+
+<div class="aaaaa"></div>
+
