--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -94,6 +94,15 @@
 }
 
 
+.Bottom-Fixation {
+    height: 200px;
+    position: relative;
+}
+.Bottom-Fixation .aaa {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}
 
 
 
