--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,11 +67,11 @@
            ユーザー一覧
          <% end %>
        </li>
-       <li class="nav-item">
-        <%= link_to (), class:"nav-link mx-2" do %>
-           CD一覧
-         <% end %>
-      </li>
+       <!-- <li class="nav-item"> -->
+        <!-- = link_to (), class:"nav-link mx-2" do  -->
+           <!-- CD一覧 -->
+          <!-- end  -->
+      <!-- </li> -->
       <li class="nav-item">
         <%= link_to new_admins_artist_path, class:"nav-link mx-2" do %>
            CD新規追加
