--- a/app/views/admins/users/show.html.erb
+++ b/app/views/admins/users/show.html.erb
@@ -45,7 +45,7 @@
             <tbody>
         <% order.order_items.each do |order_item| %>
           <tr class="table-secondary">
-            <td><%= order_item.item.album_name %></td>
+            <td><%= link_to admins_item_path(order_item.item) do %><%= order_item.item.album_name %><% end %></td>
             <td><%= order_item.item_order_counted %>個</td>
             <td>*</td>
             <td>¥<%= order_item.item_order_price %></td>
