--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -37,6 +37,7 @@
 					<%= form_for(@cart_item , url:item_cart_items_path(@item), html:  {class: "float-right"}) do |f|  %>
 					<%= f.number_field :item_cart_counted ,value:"1", in: 1...21, size: 20 %>点
 					<% if user_signed_in? %>
+					<!-- ここは複数条件を使えばもう少しきれいに書けそう。余裕があれば書き換えます。 -->
 					<% if @item.item_show_flg == true %>
 						<%= button_tag :type => "submit", :class =>"btn btn-danger my-5" do %>
 	  					<i class="fas fa-cart-arrow-down"></i> カートにいれる
