--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -93,8 +93,19 @@
   margin: 0 auto;
 }
 
-/* 検索画面のマージン */
-.search-mar {
-  margin: 100px 0 0 300px ;
+
+.Bottom-Fixation {
+    height: 200px;
+    position: relative;
 }
+.Bottom-Fixation .aaa {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}
+
+
+
+
+
 
