--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -13,7 +13,8 @@
   <button type="button" class="btn btn-success btn-block mar"><div class="pad">ユーザー</div></button>
   <% end %>
 
-  <%= link_to admins_status_path do %>
+
+  <%= link_to admins_orders_path do %>
   <button type="button" class="btn btn-info btn-block mar"><div class="pad">配送状況・在庫切れ管理</div></button>
   <% end %>
 </div>
