--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -95,6 +95,16 @@
 
 
 
+.Bottom-Fixation {
+    height: 200px;
+    position: relative;
+}
+.Bottom-Fixation .aaa {
+    position: absolute;
+    right: 30px;
+    bottom: 30px;
+}
+
 
 
 
