--- a/app/views/admins/items/show.html.erb
+++ b/app/views/admins/items/show.html.erb
@@ -4,6 +4,37 @@
 
 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10 mx-auto">
  <h2 class="my-5"><%= @artist.artist_name %> / <%= @item.album_name %>-詳細</h2>
+
+<!-- item_show_flgがfalseの場合に出る注意書きです。 -->
+<% if @item.item_show_flg == false %>
+  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    <strong>現在取り扱いを停止しています。</strong></br>再開する場合は再開ボタンを押してください。
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+<% end %>
+<!-- 注意書き終わり -->
+
+<!-- 商品取り扱い更新のボタンです。一応ここにもいれましたが、artist/showにもあるのでビューいじる方がいらないと思ったら消してくださって構いません。 -->
+<% if @item.item_show_flg == true %>
+ <%= link_to hidden_item_path(@item),method: :patch, class: "btn btn-danger white-text float-right mb-2",data:{confirm: "取り扱いを停止します。"} do %>
+        <i class="fas fa-minus"></i> 取り扱いを停止する
+        <% end %>
+<% else %>
+ <%= link_to show_item_path(@item),method: :patch, class: "btn btn-info white-text float-right mb-2",data:{confirm: "取り扱いを開始します。"} do %>
+        <i class="fas fa-plus"></i> 取り扱いを再開する
+        <% end %>
+<% end %>
+
+
+<!-- Discnewを消したので追加しました。できればドロップダウン等の、通常は隠れるような仕様にしたいです。 -->
+<span><strong>Disc新規追加</strong></span>
+<%= form_for(@disc, url:admins_item_discs_path(@item,@disc)) do |f| %>
+ディスクタイプ<%= f.text_field :disc_type %>
+<%= f.submit do %><i class="fas fa-plus"></i> Discを新しく追加する <% end %>
+<% end %></br>
+
  <table class="table">
    <thead class="thead-dark">
      <tr>
@@ -13,6 +44,7 @@
        <th scope="col">レーベル</th>
        <th scope="col">値段</th>
        <th scope="col">在庫</th>
+       <th scope="col">発売日</th>
        <th scope="col"></th>
      </tr>
    </thead>
@@ -26,6 +58,7 @@
        <td><%= @item.label %></td>
        <td><%= @item.item_price_tax_free %></td>
        <td><%= @item.stock %></td>
+       <td><%= @item.created_at.strftime('%y年%m月%d日') %></td>
        <td>
         <%= link_to edit_admins_item_path(@item), class: "btn btn-danger white-text" do %>
         <i class="fas fa-wrench"></i> 編集
@@ -44,15 +77,17 @@
   <thead class="thead-light">
     <tr>
       <th scope="col">Type</th>
+      <th scope="col">Type</th>
       <th scope="col">曲数</th>
       <th scope="col">曲名一覧</th>
       <th></th>
       <th></th>
     </tr>
   </thead>
-  <tbody>
+  <tbody><% @disc_number = 1 %>
     <% @discs.each do |disc| %>
     <tr>
+      <td><%= link_to  edit_admins_item_disc_path(@item,disc),method: :post do %>ディスクNo.<%= @disc_number %><% end %></td>
       <td scope="row"><%= disc.disc_type %></td>
       <td><%= disc.songs.count %></td>
 
@@ -72,15 +107,15 @@
         <i class="fas fa-wrench"></i> 編集
         <% end %></td>
         <td>
-      <%= link_to top_path, class: "btn btn-danger white-text mt-3" do %>
+      <%= link_to admins_item_disc_path(@item,disc),method: :delete, class: "btn btn-danger white-text mt-3" do %>
         <i class="far fa-trash-alt"></i> 削除
         <% end %></td>
-    </tr>
+    </tr><% @disc_number += 1 %>
     <% end %>
   </tbody>
 </table>
 <div class="text-center">
-  <%= link_to :back, class: "btn btn-success white-text mb-3" do %>
+  <%= link_to admins_artist_path(@artist), class: "btn btn-success white-text mb-3" do %>
   <i class="fas fa-chevron-left"></i> 戻る
   <% end %>
 </div>
