--- a/app/views/admins/artists/new.html.erb
+++ b/app/views/admins/artists/new.html.erb
@@ -52,7 +52,7 @@
 
 <div class="col-sm-6 bg-secondary" style="height: 250px; margin-bottom: 50px; border-radius: 20px;">
 <h4 class="my-5 border-bottom text-light text-center">アーティストが登録されていない場合</h4>
-<%= form_for(@artist) do |f| %>
+<%= form_for(@artist, url:admins_artists_path) do |f| %>
     <%= f.text_field :artist_name,  :size=>"25" %>
     <%= button_tag :type => "submit", :class =>"btn btn btn-primary" do %>
   <i class="fas fa-plus"></i> アーティストを追加
