--- a/app/views/admins/top.html.erb
+++ b/app/views/admins/top.html.erb
@@ -5,12 +5,12 @@
   <h2>管理したいものを選択する</h2>
 
   <%= link_to new_admins_artist_path do %>
-  <button type="button" class="btn btn-warning btn-block mar"><div class="pad">商品</div></button>
+  <button type="button" class="btn btn-warning btn-block mar"><div class="pad">商品の追加</div></button>
   <% end %>
 
 
   <%= link_to admins_users_path do %>
-  <button type="button" class="btn btn-success btn-block mar"><div class="pad">ユーザー</div></button>
+  <button type="button" class="btn btn-success btn-block mar"><div class="pad">ユーザー一覧</div></button>
   <% end %>
 
 
