--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -5,7 +5,7 @@
 
 
 
-<h2 class="text-center text-danger"><%= flash[:countupdate] %></br>
+<h2 class="text-center text-danger"><%= flash[:countupdate] %></br><%= flash[:counteddestroy] %></br>
  <%= flash[:cartitemdestroy] %></h2>
 <div class="container">
 <div class="row">
