--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -18,7 +18,7 @@
   <h4><strong>カートに商品を追加してください。</strong></h4>
 </div>
 <% else %>
-<h2 class="text-center text-danger"><%= flash[:cartitemdestroy] %></br><%= flash[:countedupdate] %></h2>
+<h2 class="text-center text-danger"><%= flash[:cartitemdestroy] %></br><%= flash[:counteddestroy] %></br><%= flash[:countedupdate] %></h2>
 
 <div class="col-11 mx-auto">
 	<!-- エラーメッセージ -->
